
=======================================================
		WanT code:  Log of Changes 
=======================================================


Oct 12 2011     version number changed to 2.4.0beta1 . decay.x utility added.
		memstat.c routine removed. (AF)

Oct 11 2011     datafile_urot input var added to blc2wan, to allow for and extra
		unitary rotation to be plugged in. do_cmplxconjg var added to fix
		an old bug in SaX. (AF)

Apr 19 2011     memusage routines added to transport and embed. 
		Problem with ne_buffer fixed (wasn't it already). (AF)

Mar 17 2011     150th anniversary of unified Italy. FOund and fixed a bug showing up
		when damping to file lead-self-energies or conductor green's functions:
		In those cases, kpt symmetry should not be used and it is recommended not
		to specify the kpt mesh by hand. This makes the 2D FFT working properly. 
		Checks and tests added. 
		Buffering of correlation self-energy added. (AF)

Feb 14 2011     want repository moved to qe-forge and converted to svn.
		Courtesy of Layla Martin-Samos. (AF)

Jan 25 2011     memstat.c updated from QE-4.2. Courtesy of Yifeng Chen.  (AF)

Dec 07 2010     Cleanup in embed and transport. vars for correlation sgm's 
		in the leads added. Big changes in correlation module to
		be consistent with the new treatment of the self-energies. 
		Test03 updated including a case study of the Klein paradox. (AF)

Nov 24 2010     iwin_max, iwin_min, ifroz_max, ifroz_min renamed as
		iwin_kmax, iwin_kmin, etc.
		iwin_max, iwin_min, ifroz_max, ifroz_min vars added
		with the meaning to work on all the kpts. (AF)

Nov 23 2010     iotk-lib update to version 1.2.1 . Makefile system slighlty
		modified. (AF)

Nov 21 2010     scale, shift parameters added to dos.f90. (AF)

Oct 31 2010     Bug fixed in embed. Trace of the gamma function (coupling matrix)
		printed out in the dos file. Test14 updated. (AF)

Oct 30 2010     Bug fixed in embed when using smearing different from lorentzian.