@@ -4,6 +4,8 @@
 =======================================================
 
 
+Oct 14 2011     operator_module updated; sum_sgm.x tool added to utility. (AF)
+
 Oct 12 2011     version number changed to 2.4.0beta1 . decay.x utility added.
 		memstat.c routine removed. (AF)
 
